<resources>
    <string name="app_name">CineZone</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>

   <string name="release_on">released on</string>
    <string name="overview">Overview</string>
    <string name="title_favorite">Favorite</string>

    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="error_search">Can\'t find the movie</string>
    <string name="no_data">Empty data</string>
    <string name="image_backdrop">Image backdrop</string>
    <string name="image_poster">Image Poster</string>
    <string name="search_movie">Search Movie</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="remove_favorite">Removed to Favorite</string>
    <string name="add_favorite">Added to Favorite</string>
</resources>